# nano-vllm

./: .gitignore  example.py  model_structure_write.txt  pyproject.toml  qwen2_infer.py  test.py  test_parallel.py
docs/: jax_embed_head.md
examples/: embed_head_simulation.py  jax_complete_demo.py  jax_embed_head_demo.py  model_structure.py  pytorch_jax_comparison.py  test_f_linear_demo.py  test_narrow_demo.py  test_parallel_lmhead.py
examples/torch_basic/: api_chunk.py  api_named_parameters.py  api_split.py  argmax_test.py  dim_demo.py  llm_dim_apis.py  torch_dim.ipynb  概率分布.ipynb
models/: qwen2_05b.txt  qwen3_06b.txt
nanovllm/: config.py  main.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py
nanovllm/layers/: attention.py  embed_head.py  jax_embed_head.py  linear.py  sampler.py
nanovllm/models/: llama.py  models_mapping.py  qwen2.py  qwen3.py
nanovllm/utils/: loader.py
scripts/: install_jax.sh
